--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
         
         <aside>
-            <article>
+            <article class="profile">
                 <header>
                     <h2>Kota Bandung</h2>
                     <p>Kota Kembang Paris van Java</p>
@@ -78,6 +78,7 @@
                         <figcaption>Lambang</figcaption>
                     </figure>
                 </header>
+                
                 <section>
                     <h3>Informasi Lainnya</h3>
                     <table>
